POR/RefEdge/src/objects/Reference_Request_Account__c.object
<CustomObject>
    <description>Junction table associating Reference Requests with accounts</description>
    <fields>
        <fullName>Account_Request_Status__c</fullName>
        <label>Managed Request Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Longer Needed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Give Up - Legal Won&apos;t Approve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Give Up - Service Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Give Up - Contact Left Company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Give Up - Contact Unresponsive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unavailable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Response</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account_Request__c</fullName>
        <formula>HYPERLINK(  Id ,&apos;Details&apos;)</formula>
        <label>Account Request</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <description>Reference request account</description>
        <inlineHelpText>Reference request account</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Reference_Request_Accounts</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Account_f__c</fullName>
        <description>Field have Name of Account</description>
        <formula>Account__r.Name</formula>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activity_Date__c</fullName>
        <description>Activity Date on Reference Use form; date the Activity occurred.</description>
        <label>Activity date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Adv_Routing_Criteria__c</fullName>
        <label>Criteria</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Declined</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Response</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approve_Deny_Notes__c</fullName>
        <label>Approve Deny Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Combined_Status__c</fullName>
        <formula>IF(AND(NOT(TEXT(Account_Request_Status__c) = &apos;Completed&apos;), NOT(CONTAINS(TEXT(Account_Request_Status__c), &apos;Give Up&apos;))), &apos;In Progress&apos;, IF(ISBLANK(TEXT(Approval_Status__c)), IF(TEXT(Account_Request_Status__c) = &apos;Completed&apos;, &quot;Completed&quot;, &quot;Give Up&quot;), TEXT(Approval_Status__c)) &amp; &quot; - &quot; &amp; TEXT(Process__c))</formula>
        <label>Account Request Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Community_Invite__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Community Invite</label>
        <referenceTo>Community_Invite__c</referenceTo>
        <relationshipLabel>Account Requests</relationshipLabel>
        <relationshipName>Account_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Community_Participate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Community Participate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deadline__c</fullName>
        <label>Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Influitive_Challenge_Data__c</fullName>
        <label>Influitive Challenge Data</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Influitive_Challenge_Id__c</fullName>
        <label>Influitive Challenge Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Influitive_Challenge_Status__c</fullName>
        <label>Influitive Challenge Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Unpublish</fullName>
                </value>
                <value>
                    <fullName>Publish</fullName>
                </value>
                <value>
                    <fullName>UnArchive</fullName>
                </value>
                <value>
                    <fullName>Archive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Escalation_to_Owner_Manager__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Escalated to Manager</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_No_Response__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Response</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Reminder_to_Owner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reminder Sent to Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Managed_Request__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Managed Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Process__c</fullName>
        <label>Process</label>
        <picklist>
            <picklistValues>
                <fullName>Peer2Peer</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Managed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Owner_f__c</fullName>
        <formula>Project_Owner__r.FirstName &amp; &quot; &quot; &amp; Project_Owner__r.LastName</formula>
        <label>Project Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reference Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reference_Request_Additional_Info__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reference Request Additional Info</label>
        <referenceTo>Reference_Request_Additional_Info__c</referenceTo>
        <relationshipLabel>Account Requests</relationshipLabel>
        <relationshipName>Account_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reference_Request__c</fullName>
        <description>Reference request association</description>
        <inlineHelpText>Reference request association</inlineHelpText>
        <label>Reference Request</label>
        <referenceTo>Reference_Request__c</referenceTo>
        <relationshipName>Reference_Request_Accounts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Reference_Type_Needed__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reference Type Needed</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>Referenceability_Type__c.Project_type__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Referenceability_Type__c.Request_type__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Referenceability_Type__c</referenceTo>
        <relationshipLabel>Account Requests</relationshipLabel>
        <relationshipName>Reference_Request_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reference_Type_Needed_f__c</fullName>
        <formula>Reference_Type_Needed__r.Name</formula>
        <label>Reference Type Needed</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_Use__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allows for segmenting Reference Use records from other RRAC records in reporting/dashboard; checked when a Reference Use is recorded from the Reference Use form.</description>
        <label>Reference Use</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Related_Feed_Item_Ids__c</fullName>
        <label>Related Feed Item Ids</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Notes__c</fullName>
        <inlineHelpText>Provide details that will help the recipient process your request.</inlineHelpText>
        <label>Request Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Requester__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requester</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Reference_Request_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Task_ID__c</fullName>
        <label>Account Request Task ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_to_Complete__c</fullName>
        <formula>IF( Reference_Use__c ,0,Activity_Date__c  -  DATEVALUE(Reference_Request__r.CreatedDate ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time to Complete</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Account Request</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Requester__c</columns>
        <columns>Approval_Status__c</columns>
        <columns>Account_Request_Status__c</columns>
        <columns>Managed_Request__c</columns>
        <columns>Combined_Status__c</columns>
        <columns>Reference_Type_Needed__c</columns>
        <columns>Deadline__c</columns>
        <columns>Reference_Use__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>RRA-{000000000}</displayFormat>
        <label>Details</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>